fix visitor, add findByEmail and findByName change field in Visitor Conference visit to Set<Conference> visit

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,14 +20,13 @@
 
         <div class="col-md-10 d-flex justify-content-center mx-auto ">
 
-            <form th:action="@{/registration-visitor}" method="POST"
+            <form action="#" th:action="@{'/registration-visitor/'+${confId}}"  th:object="${visitor}" method="POST"
                   class="form-inline py-5 justify-content-center " style="width: 80%; margin-top: 20%">
 
 
-                <input type="email" th:name="email" style="width: 60%;" class="form-control px-5 py-4 mr-2"
+                <input type="email" th:field="*{email}" style="width: 60%;" class="form-control px-5 py-4 mr-2"
                        id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <input type="hidden" th:name="confId"+ th:value="${visitor.getConfId()}">
-<!--                <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>-->
+                <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
                 <button type="submit" class="btn btn-dark">Go</button>
             </form>
             </div>
