--- a/src/main/resources/templates/topicquestions.html
+++ b/src/main/resources/templates/topicquestions.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
     <a class="navbar-brand" href=""><i class="fab fa-napster"></i> LIVE Conference</a>
     <i class="navbar-brand" th:text="${visitor.getEmail()}"> Visitor email</i>
-    <a class="navbar-brand" th:href="@{'/logout/'+${visitor.getConfId()}}"> <i class="far fa-sad-tear"></i> Leave</a>
+    <a class="navbar-brand" th:href="@{'/logout/'+${topic.confId}}"> <i class="far fa-sad-tear"></i> Leave</a>
 
 </nav>
 <nav class="nav py-3 justify-content-center">
