--- a/src/main/resources/templates/conference-page.html
+++ b/src/main/resources/templates/conference-page.html
@@ -13,61 +13,37 @@
 <div class="container-fluid py-5">
     <div class="col-sm-8 mx-auto py-3">
         <div class="row py-3 flex-column">
-            <h3 class="text-center h3 py-3 text-uppercase"><p th:text= "${Confid.getTheme()}"></p><a class="btn btn-sm btn-info mx-3" th:href="@{'/conference-edit/'+${confId}}">Edit</a></h3>
-            <p class="text-center py-2"><b th:text= "${Confid.getStart()}"></b> <b th:text= "${Confid.getEnd()}"></b></p>
+            <h3 class="text-center h3 py-3 text-uppercase"><p th:text="${Confid.getTheme()}"></p><a
+                    class="btn btn-sm btn-info mx-3" th:href="@{'/conference-edit/'+${confId}}">Edit</a></h3>
+            <p class="text-center py-2"><b th:text="${Confid.getStart().toLocalDate().toString()}+ ${Confid.getStart().toLocalTime().toString()}+' - '"></b> <b th:text="${Confid.getEnd().toLocalDate().toString()}+' '+ ${Confid.getEnd().toLocalTime().toString()}"></b></p>
             <p class="px-5" th:text="${Confid.getDescription()}"></p>
+        </div>
     </div>
-    </div>
-<hr>
+    <hr>
     <div class="col-sm-8 mx-auto py-3">
         <h2 class="h2 text-center py-3">List Of Topics <a class="btn btn-success" href="/topic-add">Add topic</a></h2>
 
-        <div class="row py-3 topic">
+        <div class="row py-3 topic" th:each="topic : ${allTopic}">
 
             <div class="col-sm-3 mx-auto">
                 <figure class="figure">
-                    <img src="../static/images/image-placeholder.png" th:src="@{/images/image-placeholder.png}" class="figure-img img-fluid rounded" height="350" width="350"/>
-                    <figcaption class="figure-caption">Speaker picture above, the name and descr here</figcaption>
+                    <img src="../static/images/image-placeholder.png" th:src="@{'/images/'+${topic.getSpeakerimg()}}"
+                         class="figure-img img-fluid rounded" height="350" width="350"/>
+                    <figcaption class="figure-caption" th:text="${topic.getSpeaker()}">Speaker picture above, the name and descr here</figcaption>
+                    <figcaption class="figure-caption" th:text="${topic.getSpeakerdesc()}">Speaker picture above, the name and descr here</figcaption>
                 </figure>
             </div>
             <div class="col-sm-8 mx-auto">
-                <h4 class="h4">First topic name</h4>
-                <a class="btn btn-info btn-sm" href="/topic-edit">Edit</a><a class="btn btn-danger btn-sm mx-3" href="/topic-delete" value="" name=""><i class="fas fa-skull-crossbones"></i></a>
-                <p class="py-2">Time: 11:00 - 11:45</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                <h4 class="h4" th:text="${topic.getTheme()}">First topic name</h4>
+                <a class="btn btn-info btn-sm" href="/topic-edit">Edit</a><a class="btn btn-danger btn-sm mx-3"
+                                                                             href="/topic-delete" value="" name=""><i
+                    class="fas fa-skull-crossbones"></i></a>
+                <p class="py-2" th:text="${topic.getStart().toLocalTime().toString()}+' - '+ ${topic.getEnd().toLocalTime().toString()}">Time: 11:00 - 11:45</p>
+                <p th:text="${topic.getDescription()}">Topic description </p>
             </div>
-        </div>
-<hr>
-        <div class="row py-3 topic">
-            <div class="col-sm-3 mx-auto">
-                <figure class="figure">
 
-                    <img src="../static/images/image-placeholder.png" th:src="@{/images/image-placeholder.png}" class="figure-img img-fluid rounded" height="350" width="350"/>
-                    <figcaption class="figure-caption">Speaker picture</figcaption>
-                </figure>
-            </div>
-            <div class="col-sm-8 mx-auto">
-                <span class="text-danger"></span><h4 class="h4">Second topic name</h4>
-                <a class="btn btn-info btn-sm" href="/topic-edit">Edit</a><a class="btn btn-danger btn-sm mx-3" href="/topic-delete" value="" name=""><i class="fas fa-skull-crossbones"></i></a>
-                <p class="p py-2">Time: 11:45 - 12:30</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-            </div>
         </div>
-<hr>
-        <div class="row py-3 topic">
-            <div class="col-sm-3 mx-auto">
-                <figure class="figure">
-                    <img src="../static/images/image-placeholder.png" th:src="@{/images/image-placeholder.png}" class="figure-img img-fluid rounded" height="350" width="350"/>
-                    <figcaption class="figure-caption">Speaker picture</figcaption>
-                </figure>
-            </div>
-            <div class="col-sm-8 mx-auto">
-                <h4 class="h4">Third topic name</h4>
-                <a class="btn btn-info btn-sm" href="/topic-edit">Edit</a><a class="btn btn-danger btn-sm mx-3" href="/topic-delete" value="" name=""><i class="fas fa-skull-crossbones"></i></a>
-                <p class="py-2">Time: 12:40 - 11:20</p>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-            </div>
-        </div>
+
 
 
     </div>
